--- a/theme_ubuntu/main.html
+++ b/theme_ubuntu/main.html
@@ -2,11 +2,33 @@
 <html lang="{ config.theme.locale.language }">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-3.10.0.min.css" />
     {% for path in config.extra_css %}
     <link rel="stylesheet" href="{{ path | url }}" />
     {% endfor %}
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="{{config.site_base_url}}images/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{config.site_base_url}}images/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{config.site_base_url}}images/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{config.site_base_url}}images/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{config.site_base_url}}images/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{config.site_base_url}}images/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{config.site_base_url}}images/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{config.site_base_url}}images/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{config.site_base_url}}images/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{{config.site_base_url}}images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{config.site_base_url}}images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{config.site_base_url}}images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{config.site_base_url}}images/favicon-16x16.png">
+    <link rel="manifest" href="{{config.site_base_url}}images/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{{config.site_base_url}}images/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ config.site_name }}</title>
 </head>
 
