--- a/theme_ubuntu/main.html
+++ b/theme_ubuntu/main.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="{{config.site_base_url}}images/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="{{config.site_base_url}}images/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="{{config.site_base_url}}images/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="{{config.site_base_url}}images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="{{config.site_base_url}}images/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="{{config.site_base_url}}images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="{{config.site_base_url}}images/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{config.site_base_url}}images/favicon-16x16.png">
@@ -28,7 +28,12 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="{{config.site_base_url}}images/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
+    <style>
+        table {
+            display: block;
+            overflow-x: auto;
+        }
+    </style>
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ config.site_name }}</title>
 </head>
 
@@ -39,8 +44,8 @@
                 <div class="p-navigation__tagged-logo">
                     <a class="p-navigation__link" href="{{ config.site_url }}">
                         <div class="p-navigation__logo-tag">
-                            <img class="p-navigation__logo-icon"
-                                src="{{config.site_base_url}}UbuntuKrCircleWhite.svg" alt="">
+                            <img class="p-navigation__logo-icon" src="{{config.site_base_url}}UbuntuKrCircleWhite.svg"
+                                alt="">
                         </div>
                         <span class="p-navigation__logo-title">{{ config.site_name_short }}</span>
                     </a>
@@ -158,20 +163,20 @@
     </div>
     <footer class="p-strip--light">
         <nav class="row" aria-label="Footer">
-          <div class="has-cookie">
-            <p>{{config.copyright}}</p>
-            <ul class="p-inline-list--middot">
-              <li class="p-inline-list__item">
-                <a href="mailto:{{config.contact_email}}"><small>이메일로 연락하기</small></a>
-              </li>
-              <li class="p-inline-list__item">
-                <a href="{{config.repo_url}}"><small>{{config.repo_name}}</small></a>
-              </li>
-            </ul>
-            <span class="u-off-screen"><a href="#">Go to the top of the page</a></span>
-          </div>
+            <div class="has-cookie">
+                <p>{{config.copyright}}</p>
+                <ul class="p-inline-list--middot">
+                    <li class="p-inline-list__item">
+                        <a href="mailto:{{config.contact_email}}"><small>이메일로 연락하기</small></a>
+                    </li>
+                    <li class="p-inline-list__item">
+                        <a href="{{config.repo_url}}"><small>{{config.repo_name}}</small></a>
+                    </li>
+                </ul>
+                <span class="u-off-screen"><a href="#">Go to the top of the page</a></span>
+            </div>
         </nav>
-      </footer>
+    </footer>
 
     <script>
         let fuse = undefined;
