메뉴 이름 수정

--- a/theme_ubuntu/main.html
+++ b/theme_ubuntu/main.html
@@ -50,8 +50,8 @@
                         <span class="p-navigation__logo-title">{{ config.site_name_short }}</span>
                     </a>
                 </div>
-                <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
-                <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
+                <a href="#navigation" class="p-navigation__toggle--open" title="menu">메뉴</a>
+                <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">메뉴 닫기</a>
             </div>
 
             <nav class="p-navigation__nav" aria-label="Example main">
@@ -99,7 +99,7 @@
             <aside class="col-3">
                 <nav class="p-side-navigation--raw-html is-sticky" id="drawer" aria-label="Table of contents">
                     <a href="#drawer" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
-                        Toggle side navigation
+                        하위 문서 및 목차
                     </a>
 
                     <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
@@ -108,7 +108,7 @@
                         <div class="p-side-navigation__drawer-header">
                             <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle"
                                 aria-controls="drawer">
-                                Toggle side navigation
+                                하위 문서 및 목차
                             </a>
                         </div>
                         {% for nav_item in nav %}
