--- a/theme_ubuntu/main.html
+++ b/theme_ubuntu/main.html
@@ -32,6 +32,7 @@
         table {
             display: block;
             overflow-x: auto;
+            word-break: keep-all;
         }
     </style>
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ config.site_name }}</title>
