--- a/theme_ubuntu/main.html
+++ b/theme_ubuntu/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{ config.theme.locale.language }">
+<html lang="{{config.theme.locale}}">
 
 <head>
     <meta charset="utf-8">
@@ -159,7 +159,7 @@
 
             </aside>
 
-            <main class="col-9" id="main-content">
+            <main class="col-9" id="main-content" data-pagefind-body>
                 {{ page.content }}
             </main>
 
