--- a/theme_ubuntu/main.html
+++ b/theme_ubuntu/main.html
@@ -35,143 +35,192 @@
             overflow-x: auto;
             word-break: keep-all;
         }
+        body { margin: 0; }
+        main.l-docs__main {
+            min-height: 53vh;
+        }
     </style>
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ config.site_name }}</title>
 </head>
 
 <body>
-    <header id="navigation" class="p-navigation is-dark">
-        <div class="p-navigation__row">
-            <div class="p-navigation__banner">
-                <div class="p-navigation__tagged-logo">
-                    <a class="p-navigation__link" href="{{ config.site_url }}">
-                        <div class="p-navigation__logo-tag">
-                            <img class="p-navigation__logo-icon" src="{{config.site_base_url}}UbuntuKrCircleWhite.svg"
-                                alt="">
+    <div class="l-docs">
+        <div class="l-docs__header">
+            <header id="navigation" class="p-navigation is-dark">
+                <div class="l-docs__subgrid">
+                    <div class="l-docs__sidebar">
+                        <div class="p-navigation__banner">
+                            <div class="p-navigation__tagged-logo">
+                                <a class="p-navigation__link" href="{{ config.site_url }}">
+                                    <div class="p-navigation__logo-tag">
+                                        <img class="p-navigation__logo-icon"
+                                            src="{{config.site_base_url}}UbuntuKrCircleWhite.svg" alt="">
+                                    </div>
+                                    <span class="p-navigation__logo-title">{{ config.site_name_short }}</span>
+                                </a>
+                            </div>
+                            <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
+                            <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close
+                                menu</a>
                         </div>
-                        <span class="p-navigation__logo-title">{{ config.site_name_short }}</span>
-                    </a>
+                    </div>
+                    <div class="l-docs__main">
+                        <div class="p-navigation__row u-fixed-width">
+                            <nav class="p-navigation__nav" aria-label="Example main">
+                                <ul class="p-navigation__items">
+                                    {% for nav_item in nav %}
+                                    {% if nav_item.children %}
+                                    <li class="p-navigation__item {% if nav_item.active %}is-selected{% endif %}">
+                                        {% set nav_item = nav_item.children | first %}
+                                        <a class="p-navigation__link" href="{{ nav_item.url|url }}">{{ nav_item.title
+                                            }}</a>
+                                    </li>
+                                    {% else %}
+                                    <li class="p-navigation__item {% if nav_item.active %}is-selected{% endif %}">
+                                        <a class="p-navigation__link" href="{{ nav_item.url|url }}">{{ nav_item.title
+                                            }}</a>
+                                    </li>
+                                    {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
                 </div>
-                <a href="#navigation" class="p-navigation__toggle--open" title="menu">메뉴</a>
-                <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">메뉴 닫기</a>
-            </div>
+            </header>
 
-            <nav class="p-navigation__nav" aria-label="Example main">
-                <ul class="p-navigation__items">
+            {% if 'search' in config['plugins'] %}
+            <section id="search-docs" class="p-strip is-bordered is-shallow l-docs__subgrid">
+                <div class="l-docs__sidebar u-hide--medium u-hide--small">
+                    <div class="u-fixed-width">
+                        <h5 class="u-sv-2">{% for nav_item in nav %}{% if nav_item.active %}{{ nav_item.title }}{% endif
+                            %}{% endfor %}</h5>
+                    </div>
+                </div>
+                <div class="l-docs__main">
+                    <div class="row">
+                        <div id="search" class="p-search-box u-no-margin--bottom"></div>
+                    </div>
+                </div>
+            </section>
+            {% endif %}
+        </div>
+        <aside class="l-docs__sidebar">
+            <nav class="p-side-navigation--raw-html is-sticky" id="drawer" aria-label="Table of contents">
+                <div class="u-hide--large p-strip is-shallow">
+                    <div class="u-fixed-width">
+                        <a href="#drawer" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
+                            하위 문서 및 목차
+                        </a>
+                    </div>
+                </div>
+
+                <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
+
+                <div class="p-side-navigation__drawer">
+                    <div class="p-side-navigation__drawer-header">
+                        <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle"
+                            aria-controls="drawer">
+                            하위 문서 및 목차
+                        </a>
+                    </div>
+                    <h3>하위 문서</h3>
                     {% for nav_item in nav %}
+                    {% if nav_item.active %}
                     {% if nav_item.children %}
-                    <li class="p-navigation__item {% if nav_item.active %}is-selected{% endif %}">
-                        {% set nav_item = nav_item.children | first %}
-                        <a class="p-navigation__link" href="{{ nav_item.url|url }}">{{ nav_item.title }}</a>
-                    </li>
-                    {% else %}
-                    <li class="p-navigation__item {% if nav_item.active %}is-selected{% endif %}">
-                        <a class="p-navigation__link" href="{{ nav_item.url|url }}">{{ nav_item.title }}</a>
-                    </li>
+                    <ul>
+                        {% for nav_item in nav_item.children %}
+                        <li>
+                            {% if nav_item.children %}
+                            <a>{{ nav_item.title }}</a>
+                            <ul>
+                                {% for nav_item in nav_item.children %}
+                                <li><a href="{{ nav_item.url|url }}">{{ nav_item.title }}</a></li>
+                                {% endfor %}
+                            </ul>
+                            {% else %}
+                            <a href="{{ nav_item.url|url }}">{{ nav_item.title }}</a>
+                            {% endif %}
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
                     {% endif %}
                     {% endfor %}
-                </ul>
+                </div>
             </nav>
+        </aside>
 
-
+        <div class="l-docs__title" id="main-content">
+            <div class="p-section--shallow">
+                <div class="row">
+                    <div class="col-12">
+                        <!-- {{ page.title }} -->
+                    </div>
+                </div>
+            </div>
         </div>
-    </header>
-    {% if 'search' in config['plugins'] %}
-    <script>var base_url = '{{ base_url }}';</script>
-    <section id="search-docs" class="p-strip--light is-shallow">
-        <div class="row">
-            <div id="search"></div>
+
+        <div class="l-docs__meta">
+            <div class="l-docs__sticky-container">
+                <aside class="p-table-of-contents">
+                    <div class="p-table-of-contents__section">
+                        <h2 class="p-table-of-contents__header">목차</h2>
+                        <nav class="p-table-of-contents__nav" aria-label="Table of contents">
+                            <ul class="p-table-of-contents__list">
+                                {% for toc_item in page.toc %}
+                                <li class="p-table-of-contents__item">
+                                    <a class="p-table-of-contents__link" href="{{ toc_item.url }}">{{
+                                        toc_item.title }}</a>
+                                    {% if toc_item.children %}
+                                    <ul>
+                                        {% for toc_item in toc_item.children %}
+                                        <li><a href="{{ toc_item.url }}">{{ toc_item.title }}</a></li>
+                                        {% endfor %}
+                                    </ul>
+                                    {% endif %}
+                                </li>
+                                {% endfor %}
+                            </ul>
+
+                        </nav>
+                    </div>
+                </aside>
+            </div>
         </div>
-        <div class="row" style="margin-top: 16px; max-height: 60vh; overflow-y: auto;">
-            <ul class="p-list--divided" id="search-results">
-            </ul>
-        </div>
-    </section>
-    {% endif %}
+        <main class="l-docs__main" data-pagefind-body>
+            <div class="row">
+                <div class="col-12">
+                </div>
+                {{ page.content }}
+            </div>
+        </main>
 
-    <div class="p-strip is-shallow">
-        <div class="row">
-            <aside class="col-3">
-                <nav class="p-side-navigation--raw-html is-sticky" id="drawer" aria-label="Table of contents">
-                    <a href="#drawer" class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
-                        하위 문서 및 목차
-                    </a>
+    </div>
 
-                    <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
-
-                    <div class="p-side-navigation__drawer">
-                        <div class="p-side-navigation__drawer-header">
-                            <a href="#" class="p-side-navigation__toggle--in-drawer js-drawer-toggle"
-                                aria-controls="drawer">
-                                하위 문서 및 목차
-                            </a>
-                        </div>
-                        {% for nav_item in nav %}
-                        {% if nav_item.active %}
-                        <h3>{{ nav_item.title }}</h3>
-                        {% if nav_item.children %}
-                        <ul>
-                            {% for nav_item in nav_item.children %}
-                            <li>
-                                {% if nav_item.children %}
-                                <a>{{ nav_item.title }}</a>
-                                <ul>
-                                    {% for nav_item in nav_item.children %}
-                                    <li><a href="{{ nav_item.url|url }}">{{ nav_item.title }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                                {% else %}
-                                <a href="{{ nav_item.url|url }}">{{ nav_item.title }}</a>
-                                {% endif %}
+    <div class="l-docs__footer">
+        <footer class="p-strip--dark l-docs__subgrid">
+            <div class="l-docs__sidebar">
+                <p style="padding-left: 1.5rem">{{config.copyright}}</p>
+            </div>
+            <div class="l-docs__main">
+                <nav class="row" aria-label="Footer">
+                    <div class="has-cookie">
+                        <p>{{config.copyright_details}}</p>
+                        <ul class="p-inline-list--middot">
+                            <li class="p-inline-list__item">
+                                <a href="mailto:{{config.contact_email}}"><small>이메일로 연락하기</small></a>
                             </li>
-                            {% endfor %}
-                        </ul>
-                        {% endif %}
-                        {% endif %}
-                        {% endfor %}
-
-                        <h3>목차</h3>
-                        <ul>
-                            {% for toc_item in page.toc %}
-                            <li>
-                                <a href="{{ toc_item.url }}">{{ toc_item.title }}</a>
-                                {% if toc_item.children %}
-                                <ul>
-                                    {% for toc_item in toc_item.children %}
-                                    <li><a href="{{ toc_item.url }}">{{ toc_item.title }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                                {% endif %}
+                            <li class="p-inline-list__item">
+                                <a href="{{config.repo_url}}"><small>{{config.repo_name}}</small></a>
                             </li>
-                            {% endfor %}
                         </ul>
+                        <span class="u-off-screen"><a href="#">Go to the top of the page</a></span>
                     </div>
                 </nav>
-
-            </aside>
-
-            <main class="col-9" id="main-content" data-pagefind-body>
-                {{ page.content }}
-            </main>
-
-        </div>
-    </div>
-    <footer class="p-strip--light">
-        <nav class="row" aria-label="Footer">
-            <div class="has-cookie">
-                <p>{{config.copyright}}</p>
-                <ul class="p-inline-list--middot">
-                    <li class="p-inline-list__item">
-                        <a href="mailto:{{config.contact_email}}"><small>이메일로 연락하기</small></a>
-                    </li>
-                    <li class="p-inline-list__item">
-                        <a href="{{config.repo_url}}"><small>{{config.repo_name}}</small></a>
-                    </li>
-                </ul>
-                <span class="u-off-screen"><a href="#">Go to the top of the page</a></span>
             </div>
-        </nav>
-    </footer>
+        </footer>
+    </div>
 
     <script>
         window.addEventListener('DOMContentLoaded', (event) => {
